--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -102,6 +102,7 @@
     padding-bottom: 1rem;
     height: 100%;
     background: none;
+    padding-bottom: 5rem;
     justify-items: center;
     border-radius: 40px 0px 0px 40px;
   }
